Fix module resource access + webclient integration